--- a/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
+++ b/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
@@ -30,9 +30,9 @@ El objetivo final de este sistema multinivel es lograr la separación entre las 
 >- **Independencia Lógica de los Datos**: Es la capacidad de modificar el esquema lógico sin alterar el esquema externo ni los programas de aplicación. Este nivel de independencia es el más díficil de lograr.
 ### Modelos de Datos
 En el área de las bases de datos existe una colección de herramientas conceptuales que se utilizan para describir los datos, las relaciones, la semántica y las restricciones de integridad. Los diferentes modelos de datos existentes, pueden ser agrupados en distintas categorías:
-- **Modelos de Datos de Alto Nivel o Conceptuales**: Estos modelos están diseñados para ser abstractos y generales, enfocados en cómo la mayoría de los usuarios entienden los datos. Usan conceptos como entidades, atributos y relaciones que reflejan la realidad del dominio del problema de forma intuitiva.
-- **Modelos de Datos de Bajo Nivel o Físico**: Estos modelos proporcionan una visión detallada de cómo los datos se organizan físicamente en el sistema de almacenamiento. Incluyen detalles como estructuras de almacenamiento específicas, índices, caminos de acceso a los datos y optimización del rendimiento. Son esenciales para los administradores de bases de datos y los diseñadores de sistemas, ya que afectan directamente el rendimiento y la eficiencia del almacenamiento de datos.
-- **Modelos de Datos de Representación o Implementación**: También conocidos como modelos semánticos. Abarcan conceptos que son comprensibles para los usuarios finales, pero que también ofrecen una representación más cercana a cómo los datos se organizan en la base de datos.
+- **Modelos de datos de alto nivel o conceptuales**: Estos modelos están diseñados para ser abstractos y generales, enfocados en cómo la mayoría de los usuarios entienden los datos. Usan conceptos como entidades, atributos y relaciones que reflejan la realidad del dominio del problema de forma intuitiva.
+- **Modelos de datos de bajo nivel o físico**: Estos modelos proporcionan una visión detallada de cómo los datos se organizan físicamente en el sistema de almacenamiento. Incluyen detalles como estructuras de almacenamiento específicas, índices, caminos de acceso a los datos y optimización del rendimiento. Son esenciales para los administradores de bases de datos y los diseñadores de sistemas, ya que afectan directamente el rendimiento y la eficiencia del almacenamiento de datos.
+- **Modelos de datos de representación o implementación**: También conocidos como modelos semánticos. Abarcan conceptos que son comprensibles para los usuarios finales, pero que también ofrecen una representación más cercana a cómo los datos se organizan en la base de datos.
 
 >[!note] Esquemas e Instancias de una Base de Datos
 >- El diseño completo de la base de datos se llama ***esquema*** de la base de datos.
