--- a/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
+++ b/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
@@ -1,7 +1,7 @@
-En la unidad anterior se estudió que una de las propiedades fundamentales de las transacciones es el aislamiento. Cuando se ejecutan varias transacciones concurrentemente en la base de datos, puede que deje de conservarse la propiedad de aislamiento. Es necesario que el sistema controle la interacción entre las transacciones concurrentes; dicho control se lleva a cabo a través de uno de los muchos ***esquemas de control de concurrencia***.
+Una de las propiedades fundamentales de las transacciones es el aislamiento. Cuando se ejecutan varias transacciones concurrentemente en la base de datos, puede que deje de conservarse la propiedad de aislamiento. Es necesario que el sistema controle la interacción entre las transacciones concurrentes; dicho control se lleva a cabo a través de uno de los muchos ***esquemas de control de concurrencia***.
 El ***planificador (Scheduler)*** es el componente de las bases de datos encargado de asignar los recursos a las distintas transacciones y de gestionar el orden cronológico en que se ejecutan las instrucciones en el sistema de gestión de bases de datos. Este planificador recibe un ***schedule de entrada***, que consiste en las diversas operaciones ordenadas cronológicamente según cómo el gestor de bases de datos recibe las instrucciones, procesa esta entrada y obteniendo un ***schedule de salida***, que es el orden cronológico resultante del control de concurrencia que realiza.
 ## Esquemas Basados en Bloqueos
-Los esquemas basados en bloqueos consisten en permitir que una transacción acceda a un dato, solo si ésta tiene actualmente un bloqueo sobre dicho dato. Existen varios modos de bloquear un dato, pero nosotros abarcaremos el esquema más básico que consta de dos modos de bloqueo:
+Los esquemas basados en bloqueos consisten en permitir que una transacción acceda a un dato, solo si ésta tiene actualmente un bloqueo sobre dicho dato. Existen varios modos de bloquear un dato, pero solo abarcaremos el esquema más básico que consta de dos modos de bloqueo:
 - **Compartido (S)**: Si una transacción $T_i$ ha obtenido un bloqueo de un dato $Q$ en modo compartido, entonces $T_i$ puede leer el dato $Q$ pero no escribir $Q$. Este modo permite que otras transacciones puedan acceder y leer el dato sin problema alguno.
 - **Exclusivo (X)**: Si la transacción $T_i$ obtuvo un bloqueo de un dato $Q$ en modo exclusivo, entonces solo $T_i$ puede leer y escribir $Q$. Este modo es el más restrictivo y permite que solo la transacción que bloqueo el dato pueda leer y modificar este mismo.
 
@@ -26,15 +26,15 @@ Aunque esta técnica reduce los retrocesos en cascada, también disminuye la con
 Es importante tener en cuenta que el **upgrade** solo puede realizarse durante la fase de crecimiento del protocolo de bloqueo en dos fases, mientras que el **downgrade** solo puede realizarse durante la fase de encogimiento. Además, si una transacción intenta un **upgrade** en un recurso $Q$, puede verse obligada a esperar si otra transacción ya tiene un bloqueo compartido en $Q$.
 ### Protocolo Basados en Grafos
 El protocolo de bloqueo de dos fases es necesario para asegurar la secuencialidad en ausencia de información sobre el acceso a los datos. Sin embargo, con información adicional sobre el orden de acceso, se pueden desarrollar protocolos alternativos.
-El modelo más simple exige que se tenga que se tenga un conocimiento sobre el orden al que se accede a los datos, una forma sencilla de brindar esta información es formando un grafo dirigido acíclico o árbol.
-El protocolo de árbol, solo permite bloquear datos de forma exclusiva, dicho protocolo debe respetar las siguientes reglas:
+El modelo más simple exige que se tenga un conocimiento sobre el orden al que se accede a los datos, una forma sencilla de brindar esta información es formando un grafo dirigido acíclico o árbol. El protocolo de árbol, solo permite bloquear datos de forma exclusiva, respetando las siguientes reglas:
 1. El primer bloqueo de $T_i$ , puede ser en cualquier dato. A partir de ese momento, $T_i$ puede bloquear un dato $Q$ sólo si $T_i$ tiene actualmente bloqueado al padre de $Q$.
 2. Los datos pueden desbloquearse en cualquier momento.
 3. Si $T_i$ desbloqueo un dato, entonces $T_i$ no puede volver a bloquearlo nuevamente.
 
-Este protocolo asegura la secuencialidad y evita interbloqueos, pero no garantiza la recuperabilidad ni tampoco la ausencia de retrocesos en cascadas. Para asegurar estos dos últimos factores se pueden mantener los bloqueos hasta el final de la transacción. Aunque el protocolo de árbol evita interbloqueos, puede requerir bloqueos adicionales, reduciendo la concurrencia. Existen planificaciones posibles con el protocolo de dos fases que no son posibles con el de árbol, y viceversa.
+Este protocolo asegura la secuencialidad y evita interbloqueos, pero no garantiza la recuperabilidad ni tampoco la ausencia de retrocesos en cascadas. Para asegurar estos dos últimos factores se pueden mantener los bloqueos hasta el final de la transacción.
+Aunque el protocolo de árbol evita interbloqueos, puede requerir bloqueos adicionales, reduciendo la concurrencia. Existen planificaciones posibles con el protocolo de dos fases que no son posibles con el de árbol, y viceversa.
 ## Esquemas Basados en Hora de Entrada
-Estos protocolos garantizan la serializabilidad seleccionando por adelantado un orden entre las transacciones. El método más conocido empleado por este tipo de protocolos es el de **Estampillas de Tiempo (timestamp ordering)**, en el cual: 
+Estos protocolos garantizan la serializabilidad seleccionando por adelantado un orden entre las transacciones. El método más conocido empleado por este tipo de protocolos es el de **estampillas de tiempo (timestamp ordering)**, en el cual:
 1. A cada transacción $T_i$, el sistema le asigna una hora de entrada fija y única representada por $ts(T_i)$.
 2. Para cualquier transacción $T_k$ que entra después de $T_i$, se cumple que $ts(T_i) < ts(T_k)$.
 3. La hora de entrada asignada a cada transacción determina el orden de serializabilidad, si $ts(T_i) < ts(T_k) \Rightarrow <T_i - T_k>$.
@@ -53,7 +53,7 @@ Al igual que los protocolos de bloqueo en dos fases, las lecturas no comprometid
 - Si $T_i$ solicita una lectura sobre un dato $Q$, entonces se debe cumplir que $ts(T_i) \geq w-ts(Q)$, en caso de que esta condición se cumpla se ejecuta la operación de lectura y se actualiza la estampilla de tiempo de lectura sobre $Q$ de la siguiente manera $r-ts(Q) = max[r-ts(Q), ts(T_i)]$. Si esta condición no se cumple esto implica que $T_i$ está intentando leer un valor que fue sobreescrito por una transacción más joven, por lo tanto, la transacción retrocede.
 - Si $T_i$ solicita una escritura sobre un dato $Q$, entonces se debe cumplir que $ts(T_i) \geq r-ts(Q) \wedge ts(T_i) \geq w-ts(Q)$ en caso de que ambas condiciones se cumplan se ejecuta la operación de escritura y se actualiza la estampilla de tiempo de escritura sobre $Q$ de la siguiente manera $w-ts(Q) = ts(T_i)$. Si una de las dos condiciones no se cumple $T_i$ retrocederá, puesto que o llego tarde a realizar la escritura de dicho valor o dicho valor a escribir es obsoleto porque una transacción más joven sobreescribió ese valor con anterioridad.
 
-La regla de escritura de Thomas es una pequeña modificación al procedimiento de escritura la cual ayuda a mejorar la concurrencia durante el control de concurrencia, manejando los conflictos de escritura entre transacciones de manera más eficiente. De forma resumida la regla de Thomas modifica levemente las acciones que se realizan al momento de escribir un dato. Esta regla dicen lo siguiente:
+Las ***reglas de escritura de Thomas*** son una pequeña modificación al procedimiento de escritura la cual ayuda a mejorar la concurrencia durante el control de concurrencia, manejando los conflictos de escritura entre transacciones de manera más eficiente. De forma resumida la regla de Thomas modifica levemente las acciones que se realizan al momento de escribir un dato. Esta regla dicen lo siguiente:
 - Si $T_i$ solicita una escritura sobre un dato $Q$, entonces se debe cumplir que $ts(T_i) \geq r-ts(Q) \wedge ts(T_i) \geq w-ts(Q)$ en caso de que ambas condiciones se cumplan se ejecuta la operación de escritura y se actualiza la estampilla de tiempo de escritura sobre $Q$ de la siguiente manera $w-ts(Q) = ts(T_i)$. Si la segunda condición no es cumplida por $T_i$, el planificador simplemente ignora la operación de escritura y continua normalmente con su ejecución, esto evita el retroceso innecesario de la transacción. $T_i$ solo retrocederá si no puede cumplir con la primera condición establecida en el protocolo.
 ### Protocolos Basados en Validación (Optimistas)
 En ocasiones particulares, como aquellas donde se realizan muchas más transacciones de lectura que de escritura, resulta conveniente utilizar un método de evaluación optimista, debido a que la tasa de conflictos entre las transacciones es baja. Así, muchas de esas transacciones, si se ejecutasen sin la supervisión de un esquema de control de concurrencia, llevarían no obstante al sistema a un estado consistente. Aplicando métodos alternativos de validación podemos disminuir la sobrecarga del sistema sin perder consistencia en la base de datos.
@@ -102,14 +102,14 @@ Algunas transacciones, no solo requieren accesos a datos que ya existen, sino ta
 
 Sean $I_i$ e $I_k$ instrucciones de las transacciones $T_i$ y $T_k$ respectivamente, que aparecen en un cronograma $S$ en orden consecutivo. Sea $I_i = delete(Q)$ una instrucción a ejecutar, se pueden dar una de las siguientes situaciones:
 - Si $I_k = read(Q)$ entonces $I_i$ e $I_k$ tienen conflictos solo si $I_i$ viene antes de $I_k$. $T_k$ tendrá un error lógico, ya que ese registro ya habrá sido eliminado.
-- Si $I_k = write(Q)$ entonces $I_i$ e $I_k$ tienen conflictos solo si $I_i$ viene antes de $I_k$. $T_k$ tendrá un error lógico, porque el registro ya habrá sido eliminado.
+- Si $I_k = write(Q)$ entonces $I_i$ e $I_k$ tienen conflictos solo si $I_i$ viene antes de $I_k$. $T_k$ tendrá un error lógico, porque el registro no existe.
 - Si $I_k = delete(Q)$ entonces $I_i$ e $I_k$ tienen conflictos si $I_i$ viene antes de $I_k$. $T_k$ tendrá un error lógico, puesto que el registro ya habrá sido eliminado. Lo mismo ocurre si $I_k$ viene antes de $I_i$.
 - Si $I_k = insert(Q)$ entonces $I_i$ e $I_k$ tienen conflictos, porque si $Q$ no existe antes de las ejecuciones de $I_i$ e $I_k$, entonces si $I_i$ se ejecuta antes de $I_k$, $T_i$ producirá un error lógico porque intentará eliminar un registro que no existe. Sin embargo, si $I_k$ se ejecuta antes de $I_i$, esto no ocurrirá. Por otro lado, si $Q$ existía antes de las ejecuciones de $I_i$ e $I_k$, se producirá un error lógico si $I_k$ se ejecuta antes de $I_i$ porque $I_k$ intentará insertar un registro que ya existe, en caso contrario no ocurrirá ningún error.
 
 La forma de hacer frente a estos conflictos va a depender del protocolo utilizado por la base de datos para manejar la concurrencia, en caso de emplear un bloqueo de dos fases el registro debe tener un bloqueo exclusivo en ese dato antes de poder realizar la eliminación. En cambio, en caso de emplear un equema basado en hora de entrada se debe realizar una prueba similar a la que se realiza con la operación de escritura:
 - Si $ts(T_i) < r-ts(Q)$, se rechaza la eliminación y $T_i$ retrocede. Esto es porque el valor de $Q$ que $T_i$ iba a suprimir, ya ha sido leído por una transacción $T_j$ con $ts(T_j) > ts(T_i)$.
 - Si $ts(T_i) < w-ts(Q)$, se rechaza la eliminación y $T_i$ retrocede. Esto es porque una transacción $T_j$ con $ts(T_j) > ts(T_i)$ ha escrito $Q$.
-- Si $T_i \geq w-ts(Q)$ y $T_i \geq r-ts(Q)$ la operación de eliminación se ejecutara sin problema alguno.
+- Si $T_i \geq w-ts(Q) \wedge T_i \geq r-ts(Q)$ la operación de eliminación se ejecutara sin problema alguno.
 
 Por su parte, la operación inserción tiene conflictos con las operaciones de lectura, escritura y eliminación, dado que no se puede realizar estas operaciones si el dato sobre el cual se opera no existe.
 Dado que las inserciones le asigna un valor a $Q$, este se trata igual que la operación escritura para propósitos de control de concurrencia. Bajo el protocolo de bloqueo de dos fases, si $T_i$ realiza una operación de inserción, a $T_i$ se le da un bloqueo exclusivo en el dato $Q$ recién creado. Mientras que bajo el protocolo de ordenación por hora de entrada, si $T_i$ realiza la operación de inserción, los valores $r-ts(Q) = w-ts(Q) = ts(T_i)$, es decir, los valores de lectura y escritura para el nuevo dato son el mismo que la transacción que la introdujo a la base de datos.
