--- a/4º Año/Bases de Datos/Unidad 11/1. Bases de Datos no Relacionales.md
+++ b/4º Año/Bases de Datos/Unidad 11/1. Bases de Datos no Relacionales.md
@@ -6,8 +6,8 @@ Las bases de datos relacionales satisfacen las necesidades comerciales actuales.
 - Flexibilidad ante cambios.
 
 Existen aplicaciones que crean nuevos tipos de dato, los cuales cambian rápidamente, además de introducir volúmenes masivos de estos datos a las bases de datos, estos factores hicieron que se comenzara a considerar de forma más seria la creación de bases de datos que den soporte a este tipo de datos no tabulares.
-Sumado a que en la actualidad las aplicaciones se entregan como servicios que deben estar siempre activos, accesibles desde muchos dispositivos diferentes y escalados globalmente con datos distribuidos cerca de sus usuarios para mejorar la latencia y cumplir con la regulación de soberanía de datos. Esto va de la mano con el hecho de que las organizaciones están recurriendo a arquitecturas de escalabilidad horizontal que utilizan software abierto, que se ejecutan en servidores básicos y plataformas de computación en la nube, en lugar de una gran infraestructura monolítica de servidor y almacenamiento.
-Todos estos factores obligan a los desarrolladores, ya sea de grupos pequeños o numerosos, a trabajar de forma ágil, iterando de forma rápida y enviando los cambios en el código de forma periódica.
+Sumado a que en la actualidad las aplicaciones se entregan como servicios que deben estar siempre activos, accesibles desde muchos dispositivos diferentes y escalados globalmente con datos distribuidos cerca de sus usuarios para mejorar la latencia y cumplir con la regulación de soberanía de datos. Esto va de la mano con el hecho de que las organizaciones están recurriendo a arquitecturas de escalabilidad horizontal que utilizan software abierto, los cuales se ejecutan en servidores básicos y plataformas de computación en la nube, en lugar de una gran infraestructura monolítica de servidor y almacenamiento.
+Todos estos factores obligan a los desarrolladores, ya sea de grupos pequeños o numerosos, a trabajar de forma ágil, iterando de forma rápida y efectuando cambios en el código de forma periódica.
 Los sistemas NoSQL no tabulares ofrecen modelos de datos más flexibles, una mayor escalabilidad y rendimiento. Además, gran parte de estas bases de datos mantienen algunas características claves del modelo relacional, como lo puede ser el lenguaje de consulta expresivo, los Índices secundarios o las propiedades ACID, aunque esto última característica solo es respetada por algunas bases de datos no relacionales.
 La primera característica que diferencia a las bases de datos no tabulares de las relacionales son sus modelos de datos. Si bien existen muchas bases de datos no tabulares estas pueden ser clasificadas en las siguientes cuatro categorías:
 - **Modelo de documentos**: Este tipo de bases de datos, almacena todos los datos en documentos. En este modelo cada documento es en efecto un objeto el cual contiene uno o más campos, cada campo almacena un tipo de valor particular. Los datos en estos documentos suelen ser guardados en una estructura muy similar a un `JSON`. En este tipo de bases de datos, los datos no se guardan en tablas independientes, sino que se almacenan una relación y sus asociaciones en un mismo documento. Estas características simplifican el acceso a los datos y, en muchos casos, elimina la necesidad de operaciones JOIN y transacciones complejas de múltiples registros.
@@ -21,7 +21,7 @@ La primera característica que diferencia a las bases de datos no tabulares de l
 >Aunque no es muy intuitivo y puede requerir tiempo para comprenderlo, resulta útil para ciertos tipos de consultas. Es especialmente adecuada para aplicaciones donde las relaciones transversales son fundamentales, como la navegación por conexiones de redes sociales, topologías de redes o cadenas de suministro.
 
 - **Modelos de clave-valor**: Cada elemento se almacena como un par compuesto por una clave y su valor asociado. No obstante, el valor es opaco para el sistema, esto significa que los datos solo pueden ser accedidos a través de sus respectivas clave. Este enfoque es especialmente útil para representar datos polimórficos y no estructurados, ya que no impone un esquema fijo en los pares clave-valor.
-- **Modelos de almacenes orientados a columna**: También conocidas como "*almacenes de familias de columnas*", utilizan un mapa ordenado multidimensional distribuido y disperso para almacenar datos. Cada registro puede tener un número variable de columnas, cada columna puede agruparse en familias para facilitar el acceso o distribuirse en varias familias de columnas. Los datos se recuperan utilizando una clave principal por cada familia de columnas. Estas bases de datos son particularmente útiles para aplicaciones que requieren consultas basadas en un único valor clave.
+- **Modelos de almacenes orientados a columna**: También conocidas como “*almacenes de familias de columnas*”, utilizan un mapa ordenado multidimensional distribuido y disperso para almacenar datos. Cada registro puede tener un número variable de columnas, cada columna puede agruparse en familias para facilitar el acceso o distribuirse en varias familias de columnas. Los datos se recuperan utilizando una clave principal por cada familia de columnas. Estas bases de datos son particularmente útiles para aplicaciones que requieren consultas basadas en un único valor clave.
 
 >[!tldr] Usabilidad del Modelo Clave-Valor y Orientado a Columnas
 >Estas bases de datos son ideales para aplicaciones que solo requieren consultar datos mediante un único valor clave. Sus principales ventajas son el rendimiento y la escalabilidad, que pueden optimizarse significativamente debido a la simplicidad de los patrones de acceso a los datos y la opacidad del valor.
@@ -36,25 +36,24 @@ Para actualizaciones, ofrece métodos avanzados que permiten manipulaciones comp
 ### Consultas de Datos en Bases de Datos Basadas en Grafos
 Estos sistemas tienden a proporcionar modelos de consulta ricos donde se pueden interrogar relaciones simples y complejas para hacer inferencias directas e indirectas sobre los datos en el sistema. El análisis de tipo relacional tiende a ser muy eficiente en este tipo de bases de datos, mientras que otros tipos de análisis pueden ser menos óptimos. Como resultado, las bases de datos de grafos rara vez se utilizan para aplicaciones operativas de propósito general, si no que se combinan con bases de datos documentales o relacionales regulares para materializar estructuras de datos y consultas específicas de grafos.
 >[!tldr] Bases de Datos Multimodelo
->Para intentar controlar la complejidad que surgiría del uso de una multitud de tecnologías de almacenamiento, la industria se está moviendo hacia el concepto de bases de datos multimodelo. Estos diseños se basan en la premisa de presentar múltiples modelos de datos y tipos de consulta dentro de una única plataforma de datos, satisfaciendo así diversos requisitos de aplicación. Por ejemplo MangoDB ofrece una la agregación `&graphLookup` para el procesamiento de grafos de forma nativa.
+>Para intentar controlar la complejidad que surgiría del uso de una multitud de tecnologías de almacenamiento, la industria se está moviendo hacia el concepto de bases de datos multimodelo. Estos diseños se basan en la premisa de presentar múltiples modelos de datos y tipos de consulta dentro de una única plataforma de datos, satisfaciendo así diversos requisitos de aplicación. Por ejemplo MangoDB ofrece la agregación `&graphLookup` para el procesamiento de grafos de forma nativa.
 ### Consultas de Datos en Bases de Datos de Clave-Valor y Basadas en Columnas
-Estos sistemas proporcionan la capacidad de recuperar y actualizar datos basándose solo en una clave única o en un rango limitado de claves. Para consultar otros valores, es normal que los usuarios construyan y mantengan sus propios índices, puesto que el soporte limitado para índices secundarios, pero con varias advertencias.
+Estos sistemas proporcionan la capacidad de recuperar y actualizar datos basándose solo en una clave única o en un rango limitado de claves. Para consultar otros valores, es normal que los usuarios construyan y mantengan sus propios índices, puesto que el soporte limitado para índices secundarios, esta tarea se debe llevar a cabo con mucha precaución.
 Para realizar una actualización en estos sistemas, pueden ser necesarios realizar múltiples etapas, en primer lugar se debe encontrar el registro, luego actualizarlo y después actualizar el índice. En estos sistemas, la actualización puede implementarse como una reescritura completa de todo el registro en el cliente, independientemente de si ha cambiado un solo atributo o todo el registro.
 >[!example] Capacidades de Consultas de las Bases de Datos no Relacionales
 >La principal diferencia entre las bases de datos no tabulares radica en la capacidad de consultar datos de manera eficiente. Las bases de datos basadas en documentos ofrecen la funcionalidad de consulta más completa, lo que las hace ideales para una amplia variedad de aplicaciones operativas y de análisis en tiempo real.
 >Las bases de datos de clave-valor y basadas en columnas proporcionan un acceso rápido a los datos por clave primaria, pero con una funcionalidad de consulta muy limitada, lo que puede generar costos de desarrollo adicionales y la necesidad de implementar soluciones a nivel de aplicación para patrones de consulta más complejos.
-## Consistencia y Modelo de Transaccional
+## Consistencia y Modelo Transaccional
 La mayoría de los sistemas no tabulares suelen mantener múltiples copias de los datos para propósitos de disponibilidad y escalabilidad. Estas bases de datos pueden imponer diferentes niveles de consistencia entre estas copias, de acuerdo al nivel de consistencia proporcionado por el sistema, las bases de datos no tabulares pueden ser clasificadas en:
 - **Fuertemente consistentes**.
 - **Eventualmente consistentes**.
 
 En un sistema fuertemente consistente, las escrituras realizadas por la aplicación son inmediatamente visibles en consultas posteriores. Mientras que en un sistema eventualmente consistente, las escrituras no son inmediatamente visibles, dependiendo de qué réplica de datos que se utilice para responder la consulta.
-En los sistemas eventualmente consistentes los datos se suelen sincronizarse después de un periodo de tiempo determinado, volviendo a dejar la base de datos en un estado consistente. Por esta razón, el código de la aplicación tiende a ser algo diferente para los sistemas eventualmente consistentes, ya que se obliga al desarrollador emitir consultas idempotentes que establezcan explícitamente la consistencia en la base de datos. Además, los desarrolladores también necesitan construir lógica adicional en sus aplicaciones para manejar datos potencialmente obsoletos o eliminados.
-Las bases de datos no tabulares ofrecen garantías de atomicidad a nivel de registro individual, lo que permite reunir datos relacionados. Esta capacidad de operaciones atómicas de registro único satisface las necesidades de integridad de datos en la mayoría de las aplicaciones. Sin embargo, para cargas de trabajo que requieren transacciones multidocumento, algunas bases de datos como MongoDB han agregado soporte a las propiedades ACID en las transacciones, lo que facilita a los desarrolladores abordar una gama más amplia de casos de uso. Aun así, no todas las bases de datos no relacionales soportan los principios ACID.
-Los sistemas pueden ser fuertemente consistentemente o eventualmente consistentes, dependiendo de los requisitos de la aplicación. MongoDB permite ajustar la consistencia a nivel de consulta, permitiendo que las operaciones de lecturas se realicen contra las copias secundarias las cuales pueden no estar completamente sincronizadas.
+En los sistemas eventualmente consistentes los datos suelen sincronizarse después de un periodo de tiempo determinado, volviendo a dejar la base de datos en un estado consistente. Por esta razón, el código de la aplicación tiende a ser algo diferente para los sistemas eventualmente consistentes, ya que se obliga al desarrollador a emitir consultas idempotentes que establezcan explícitamente la consistencia en la base de datos. Además, los desarrolladores también necesitan construir lógica adicional en sus aplicaciones para manejar datos potencialmente obsoletos o eliminados.
+Las bases de datos no tabulares ofrecen garantías de atomicidad a nivel de registro individual, lo que permite reunir datos relacionados. Esta capacidad de operaciones atómicas de registro único satisface las necesidades de integridad de datos en la mayoría de las aplicaciones. Sin embargo, para cargas de trabajo que requieren transacciones multidocumento, algunas bases de datos como MongoDB, han agregado soporte a las propiedades ACID en las transacciones, lo que facilita a los desarrolladores abordar una gama más amplia de casos de uso. Aun así, no todas las bases de datos no relacionales soportan los principios ACID.
+Los sistemas pueden ser fuertemente consistentemente o eventualmente consistentes, dependiendo de los requisitos de la aplicación. MongoDB permite especificar el grado de consistencia a nivel de consulta, permitiendo que las operaciones de lecturas se realicen contra las copias secundarias las cuales pueden no estar completamente sincronizadas.
 >[!tldr] Sincronización e Inconvenientes de los Sistemas Eventualmente Consistentes
 >En sistemas eventualmente consistentes, hay un período en el que las copias de los datos no están sincronizadas, lo que puede ser aceptable para aplicaciones de solo lectura o que almacenan datos que no cambian con frecuencia, como archivos históricos. También resultan útiles para casos específicos de altas tasas de lecturas donde la base de datos está capturando información interna como por ejemplo las bitácoras, las cuales van a ser leídas a posteriori.
 >Las actualizaciones y eliminaciones en este tipo de sistemas pueden implicar complejidades adicionales, como la resolución de conflictos entre escrituras en diferentes nodos, con la ventaja que las inserciones de datos suelen tener un rendimiento generalmente bueno.
 
-La mayoría de los equipos de desarrollo esperan sistemas muy consistentes, y la elección de un modelo de consistencia en particular implica diferentes compensaciones en términos de consistencia y disponibilidad, debido a que a mayor sea el grado de consistencia menor será la disponibilidad de los datos.
-Los sistemas eventualmente consistentes pueden ofrecer ventajas en inserciones a costa de lecturas, actualizaciones y eliminaciones más complejas. Si bien gran parte de las bases de datos no relacionales proporcionan atomicidad a nivel de registro único, lo cual suele ser suficiente para muchas aplicaciones, para ciertas aplicaciones en particular puede que esto por sí solo no baste. MongoDB, por ejemplo, proporciona garantías ACID multidocumento, facilitando el abordaje de una amplia gama de casos de uso con una única plataforma de datos.
+La mayoría de los equipos de desarrollo esperan sistemas muy consistentes, y la elección de un modelo de consistencia en particular implica diferentes compensaciones en términos de consistencia y disponibilidad, debido a que a mayor sea el grado de consistencia menor será la disponibilidad de los datos. Los sistemas eventualmente consistentes pueden ofrecer ventajas en inserciones a costa de lecturas, actualizaciones y eliminaciones más complejas.
