--- a/4º Año/Bases de Datos/Unidad 11/2. Patrones de Diseño en MongoDB.md
+++ b/4º Año/Bases de Datos/Unidad 11/2. Patrones de Diseño en MongoDB.md
@@ -18,7 +18,7 @@ Los patrones de uso en MongoDB dependen del tipo de aplicación y la forma en qu
 	- **Ventajas**: El patrón es fácil de implementar incluso en sistemas existentes y no genera un impacto real en el rendimiento de las consultas sobre las últimas versiones.
 	- **Desventajas**: Duplica el número de escrituras y las consultas deben dirigirse a la colección correcta.
 7. **Schema Versioning (Versionado de Esquema)**: Ideal para aplicaciones que experimentan cambios en el esquema de datos a lo largo de su vida útil y se requiere que las versiones actuales del documento coexistan con las versiones antiguas del mismo.
-	- **Ventajas**: El patrón no requiere tiempo de inactividad, facilita la migración de esquemas y reduce la posibles deuda técnica futura
+	- **Ventajas**: El patrón no requiere tiempo de inactividad, facilita la migración de esquemas y reduce la posibles deuda técnica futura.
 	- **Desventajas**: La principal desventaja de este patrón radica en que es posible que se requieran dos índices sobre el mismo campos durante la migración.
 
 >[!note] Consideraciones del Patrón Scheme Versioning
@@ -38,4 +38,4 @@ Los patrones de uso en MongoDB dependen del tipo de aplicación y la forma en qu
 	- **Desventajas**: La principal desventaja es que se debe realizar una gestión de los subconjuntos y obtener datos adicionales requerirá de accesos adicionales a la base de datos.
 12. **Tree (Árbol)**: Ideada para aquellos casos donde los datos posean una estructura jerárquica y se realizan consultan de forma frecuente.
 	- **Ventajas**: El patrón mejora el rendimiento evitando múltiples operaciones `JOIN`.
-	- **Desventajas**: Las actualizaciones deben se gestionardas por la aplicación.
+	- **Desventajas**: Las actualizaciones deben ser gestionardas por la aplicación.
