--- a/4º Año/Bases de Datos/Unidad 12/1. Bases de Datos Distribuidas.md
+++ b/4º Año/Bases de Datos/Unidad 12/1. Bases de Datos Distribuidas.md
@@ -17,7 +17,7 @@ Cuando se replica una relación, se guarda una copia de esta en dos o más sitio
 
 Las réplicas mejoran el rendimiento de las operaciones de lectura y aumenta la disponibilidad de los datos para las transacciones de lectura. Sin embargo, las transacciones de actualización suponen una mayor sobrecarga. Se puede simplificar la gestión de las réplicas escogiendo una de ellas como ***copia principal***.
 ### Fragmentación de Datos
-Una relación $r$ está fragmentada, cuando la misma es dividida en cierta cantidad de fragmentos $r_1, r_2, \cdots , r_n$. Estos fragmentos deben contener la información suficiente como para reconstruir la relación $r$ original. En las bases de datos distribuidas se pueden dar dos tipos de fragmentación:
+Una relación $r$ está fragmentada, cuando la misma es dividida en cierta cantidad de fragmentos $r_1, r_2, \dots , r_n$. Estos fragmentos deben contener la información suficiente como para reconstruir la relación $r$ original. En las bases de datos distribuidas se pueden dar dos tipos de fragmentación:
 - Fragmentación horizontal.
 - Fragmentación vertical.
 
@@ -32,7 +32,7 @@ $$r_i = \varPi_{R_i}(r)$$
 En este caso la fragmentación debe realizarse sobre las columnas de la relación de manera tal que se pueda reconstruir la relación $r$ a partir de los distintos $r_i$. Supongamos que el esquema $R$ para la relación *sucursal* es el siguiente $R(id, nombre\_sucursal, ciudad, direccion)$, un ejemplo de fragmentación vertical sería la siguiente:
 $$r_1 = \varPi_{id, nombre\_sucursal}(Sucursal) \qquad r_2 = \varPi_{id, ciudad, direccion}(Sucursal)$$
 
-En pocas palabras las relaciones son fragmentadas columnas, no por tuplas. En este caso el atributo `id` debe estar en ambos subconjuntos porque es la única manera de poder reensamblar la relación original.
+En pocas palabras las relaciones son fragmentadas por columna, no por tupla. En este caso el atributo `id` debe estar en ambos subconjuntos porque es la única manera de poder reensamblar la relación original.
 >[!note] Transparencia
 >No se le puede exigir a los usuarios de las bases de datos el saber donde están alojados los datos ni el modo que se utiliza para acceder a estos mismos, es conveniente ofrecer cierta ***transparencia***, esta característica se puede dar de varias formas en los sistemas distribuidos:
 >
@@ -46,7 +46,7 @@ Un aspecto importante en un sistema de bases de datos distribuidos, es la red de
 >Adicionalmente el gestor de la base de datos tiene un diccionario que contiene información sobre los fragmentos, es decir, los datos que contienen dichos fragmentos y en qué localidad residen estos mismos.
 ## Transacciones Distribuidas
 En las bases de datos distribuidos manejan dos tipos de transacciones. Las ***transacciones locales*** que procesan datos que están localizados y administrados localmente, y ***transacciones globales*** las cuales acceden a datos localizados en nodos de una o más localidades.
-Cuando una transacción accede a datos alojados en distintas localidades, esta es dividida en subtransacciones. De este modo cada transacción global está compuesta en subtransacciones $\{T_1, T_2, \cdots, T_i\}$ donde cada $T_i$ es un participante de la transacción global original. Cada transacción global tiene un nodo de disparo llamado ***coordinador***, que se encarga de coordinar la ejecución de las transacciones globales.
+Cuando una transacción accede a datos alojados en distintas localidades, esta es dividida en subtransacciones. De este modo cada transacción global está compuesta en subtransacciones $\{T_1, T_2, \dots, T_i\}$ donde cada $T_i$ es un participante de la transacción global original. Cada transacción global tiene un nodo de disparo llamado ***coordinador***, que se encarga de coordinar la ejecución de las transacciones globales.
 Al igual que en las transacciones locales, una transacción distribuida debe comprometerse en todas las localidades o abortarse totalmente. Cuando se ejecuta una transacción global, primero se debe ejecutar cada una de las subtransacciones de forma local, para posteriormente obtener los resultados de ejecución de cada una de estas subtransacciones. Si al menos una subtransacción fue abortada, entonces se abortan las demás subtransacciones involucradas. En caso contrario se comprometerá la transacción y se asentarán los cambios. Para llevar adelante este proceso, los coordinadores utilizan un ***protocolo de consenso***.
 El proceso antes descrito funciona bien solo en ausencia de fallos, ya que si una transacción $T_i$ responde al coordinador que está dispuesta a comprometerse esta quedara esperando la respuesta final del coordinador, pudiendo pasar alguno de los siguientes casos:
 1. Si no recibe una respuesta por parte del coordinador, la transacción permanece en estado de espera indefinidamente, reteniendo todos los datos que bloqueo, en caso de que utilice un mecanismo de locking.
