--- a/4º Año/Bases de Datos/Unidad 13/2. Mineria de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 13/2. Mineria de Datos.md
@@ -19,7 +19,7 @@ El principal objetivo de este tipo de metodologías es transformar los datos en 
 ### Proceso Estándar Interindustrial para el Minado de Datos (CRISP-DM)
 Es una metodología utilizada para estructurar, guiar y organizar proyectos de minería y análisis de datos. Esta metodología es útil para ilustrar cómo una empresa puede pasar de tener un objetivo de negocio genera, a implementar una solución de análisis de datos para tomar decisiones proactivas. Esta metodología cuenta con las siguientes fases:
 1. **Comprensión del negocio**: En esta fase se definen los objetivos del proyecto, se evalúa la situación actual y se establecen las metas de minería de datos.
-2. **Comprensión de los datos**: Esta fase incluye la recolección inicial, descripción, exploración y verificación de la calidad de los datos. Todas estas acciones se llevan a cabo con el fin de verificar la presencia de datos nulos o atípicos, comprender como están distribuidos los datos, etc.
+2. **Comprensión de los datos**: Esta fase incluye la recolección inicial, descripción, exploración y verificación de la calidad de los datos. Todas estas acciones se llevan a cabo con el fin de verificar la presencia de valores nulos o atípicos, comprender como están distribuidos los datos, etc.
 3. **Preparación de los datos**: En esta fase se realizan tareas como la limpieza de los datos, la selección de variables relevantes, la transformación, además del formateo e integración de diferentes fuentes de datos.
 4. **Modelado**: En esta etapa se seleccionan las técnicas de minería de datos más apropiadas a aplicar sobre los datos, se construye el o los modelos y se realiza una evaluación preliminar de los mismos. En esta etapa también se suele ajustar los parámetros o recalibrar las variables en caso de que el modelo producido no cumpla con los objetivos fijados.
 5. **Evolución**: En esta fase se valoran los resultados obtenidos por el modelo verificando su precisión y confiabilidad, además se revisa el proceso, se determinan los próximos pasos y se verifica si el modelo obtenido cumple con los objetivos. Se revisan métricas como precisión, sensibilidad y especificidad para asegurarse de que el modelo sea efectivo y tenga una tasa de error baja.
@@ -32,10 +32,10 @@ Esta metodología brinda un proceso sistemático para identificar patrones poten
 4. Seleccionar y aplicar la técnica de minería de datos, para la ***extracción de patrones*** en los datos.
 5. Interpretación y evaluación de datos, muchas veces este paso conlleva la generación de nuevo conocimiento.
 
-A grandes rasgos, el proceso comienza con la selección en donde se identifican y recopilan los datos relevantes para el análisis, determinando las fuentes de datos y las variables importantes para el objetivo del proyecto. En algunos casos, también es necesario realizar un muestreo de los registros disponibles.
-El siguiente paso es el análisis de las propiedades de los datos, que implica la construcción y revisión de histogramas, diagramas de dispersión. Esto con el fin de identificar de valores atípicos y detectar valores nulos. Posteriormente, se procede al preprocesamiento donde se limpian los datos, eliminando el ruido, manejando los valores faltantes y se resuelven las inconsistencias para asegurar la calidad de los datos.
+A grandes rasgos, el proceso comienza con el proceso de selección, en donde se identifican y recopilan los datos relevantes para el análisis, determinando las fuentes de datos y las variables importantes para el objetivo del proyecto. En algunos casos, también es necesario realizar un muestreo de los registros disponibles.
+El siguiente paso es el análisis de las propiedades de los datos, que implica la construcción y revisión de histogramas, diagramas de dispersión con el fin de identificar de valores atípicos y detectar valores nulos. Posteriormente, se procede al preprocesamiento donde se limpian los datos, eliminando el ruido, manejando los valores faltantes y se resuelven las inconsistencias para asegurar la calidad de los datos.
 A continuación, se realiza la transformación de los datos de entrada, donde los datos se convierten a un formato adecuado para la minería, incluyendo la reducción de dimensionalidad, normalización y discretización de variables continuas cuando sea necesario. Al final de esta etapa, se obtiene una tabla de datos lista para aplicar la técnica de minería seleccionada.
-El siguiente consiste en seleccionar y aplicar la técnica de minería de datos más apropiada de acuerdo al conjunto de datos y el objetivo a alcanzar. Esto puede implicar la construcción de un modelo predictivo, de clasificación o de segmentación, utilizando alguna de las siguientes técnicas:
+El siguiente paso consiste en seleccionar y aplicar la técnica de minería de datos más apropiada de acuerdo al conjunto de datos y el objetivo a alcanzar. Esto puede implicar la construcción de un modelo predictivo, de clasificación o de segmentación, utilizando alguna de las siguientes técnicas:
 - Visualización.
 - Redes Neuronales.
 - Regresión (lineal, no lineal, múltiple, logística).
@@ -46,7 +46,7 @@ El siguiente consiste en seleccionar y aplicar la técnica de minería de datos 
 El resultado de esta etapa es un ***modelo de conocimiento*** que representa patrones de comportamiento observados o relaciones de asociación entre las variables del problema. Es posible emplear varias técnicas al mismo tiempo para generar distintos modelos, aunque cada técnica puede requerir una transformación deferente de los datos.
 Finalmente, se realiza la interpretación y evaluación de los datos, donde los patrones descubiertos son analizados y validados para determinar si representan conocimiento útil y significativo para el objetivo del proyecto. En esta etapa, los resultados se presentan de manera comprensible para los usuarios finales, utilizando visualizaciones y reportes apropiados. Si se han generado varios modelos mediante diferentes técnicas, se deben comparar para seleccionar el que mejor se ajuste al problema. En caso de que ningún modelo cumpla con las expectativas, se deben modificar los pasos anteriores para generar nuevos modelos.
 ## Minería de Datos Supervisada y No Supervisada
-Las técnicas de minería de datos se puede dividir en dos grandes enfoques, el supervisado y el no supervisado. El enfoque supervisado se basa en hacer predicciones a futuro utilizando datos históricos etiquetados, donde las variables objetivo, ya están definidas. Un ejemplo sería predecir el riesgo de un cliente para otorgar un préstamo. Por otro lado, el enfoque no supervisado utiliza datos no etiquetados, buscando patrones o estructuras dentro de los datos para organizar y agrupar la información.
+Las técnicas de minería de datos se puede dividir en dos grandes enfoques, el supervisado y el no supervisado. El enfoque supervisado se basa en hacer predicciones a futuro utilizando datos históricos etiquetados, donde las variables objetivo ya están definidas. Un ejemplo sería predecir el riesgo de un cliente para otorgar un préstamo. Por otro lado, el enfoque no supervisado utiliza datos no etiquetados, buscando patrones o estructuras dentro de los datos para organizar y agrupar la información.
 Las funciones de minería de datos, son divididas en dos grandes categorías los ***métodos predictivos***, que utilizan variables conocidas para predecir valores futuros o desconocidos de otras variables, y los ***métodos descriptivos***, que buscan patrones interpretables por humanos para describir los datos. Existen varias técnicas para la minería de datos que se clasifican según su función o la clase de aplicación en que se usan. Estas incluyen:
 - **Asociación**.
 - **Patrones secuenciales o temporales**.
@@ -79,7 +79,6 @@ Entre las técnicas de segmentación más comunes están:
 - **K-means**: Agrupa objetos en función de su similitud con un centroide. Esta técnica requiere que el número de clusters se define previamente.
 - **K-medoid**: Similar a K-means, pero agrupa objetos en función de su similitud con el objeto más representativo.
 
->[!tldr] Regresión y Detección de Desviaciones y Anomalías
->La ***regresión*** es una técnica que predice el valor de una variable basándose en los valores de otras variables independientes. Por ejemplo, se puede predecir los importes de ventas de nuevos productos en función de los gastos de publicidad, estimar la velocidad del viento considerando la temperatura, humedad y presión atmosférica, o utilizar series de tiempo para pronosticar índices bursátiles.
->Por otro lado, la ***detección de desviaciones y anomalías*** tiene como objetivo identificar comportamientos que se desvían significativamente de lo normal. Entre sus aplicaciones comunes están la detección de fraudes con tarjetas de crédito y la identificación de intrusos en redes informáticas. Existen varios esquemas de detección dentro de los cuales se encuentran los basados en gráficos o estafísticas, los basados en distancia y los basados en modelos.
+La ***regresión*** es una técnica que predice el valor de una variable basándose en los valores de otras variables independientes. Por ejemplo, se puede predecir los importes de ventas de nuevos productos en función de los gastos de publicidad, estimar la velocidad del viento considerando la temperatura, humedad y presión atmosférica, o utilizar series de tiempo para pronosticar índices bursátiles.
+Por otro lado, la ***detección de desviaciones y anomalías*** tiene como objetivo identificar comportamientos que se desvían significativamente de lo normal. Entre sus aplicaciones comunes están la detección de fraudes con tarjetas de crédito y la identificación de intrusos en redes informáticas. Existen varios esquemas de detección dentro de los cuales se encuentran los basados en gráficos o estafísticas, los basados en distancia y los basados en modelos.
 
