--- a/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
+++ b/4º Año/Bases de Datos/Unidad 2/2. Modelo Entidad-Relacion Extendido.md
@@ -1,4 +1,4 @@
-Debido a las limitaciones a la hora de realizar el modelado de datos con el modelo entidad-relación, este fue extendido agregando ciertas funcionalidades extra.
+Debido a las limitaciones a la hora de realizar el modelado de datos con el modelo Entidad-Relación, este fue extendido agregando ciertas funcionalidades adicionales.
 ## Especialización y Generalización
 La especialización es un proceso de diseño top-down donde un conjunto de entidades puede incluir **subgrupos** de entidades que se diferencian de alguna forma de las otras entidades del conjunto. Estos subgrupos resultan en conjuntos de entidades de ***menor nivel*** que tienen atributos o participan en relaciones que no son aplicables al conjunto de entidades de nivel superior.
 Por otro lado, la generalización es un proceso de diseño bottom-up donde se combina un número de conjuntos de entidades que comparten un serie de características, definiendo así conjunto de entidades de nivel superior del que forman parte o pertenecen.
