--- a/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
@@ -1,10 +1,9 @@
-La fase inicial del diseño de bases de datos consiste en caracterizar completamente las necesidades de datos esperadas por los usuarios de la base de datos. El resultado de esta fase es una especificación de requisitos del usuario, los cuales quedaron documentados mediante el diagrama de datos que hayamos elegido, obteniendo así un esquema conceptual de la base de datos.
-En la **fase de diseño lógico** se desarrolla un modelo abstracto de la información requerida por el negocio, basado en los requisitos recolectados durante la fase de análisis de requisitos. Este diseño no considera las limitaciones de ningún sistema de gestión de bases de datos específico.
-Durante la **fase de diseño físico**, el modelo lógico se traduce en un modelo que puede ser implementado físicamente en un sistema de gestión de bases de datos específico. Esto incluyen la forma en la que se organizan los datos físicamente, las estructuras de almacenamiento interno, los métodos de acceso, entre otros.
+La fase inicial del diseño de bases de datos consiste en caracterizar completamente las necesidades de datos esperadas por los usuarios de la base de datos. El resultado de esta fase es una especificación de requisitos del usuario, los cuales quedaron documentados mediante el diagrama de datos que hayamos elegido, obteniendo así un ***diseño conceptual*** de la base de datos.
+En la ***fase de diseño lógico*** se desarrolla un modelo abstracto de la información requerida por el negocio, basado en los requisitos recolectados durante la fase de análisis de requisitos. Este diseño no considera las limitaciones de ningún sistema de gestión de bases de datos específico.
+Durante la ***fase de diseño físico***, el modelo lógico se traduce en un modelo que puede ser implementado físicamente en un sistema de gestión de bases de datos específico. Esto incluyen la forma en la que se organizan los datos físicamente, las estructuras de almacenamiento interno, los métodos de acceso, entre otros.
 ## Mapeo del Esquema Entidad-Relación Extendido a Tablas
 Una base de datos conformada por un diagrama Entidad-Relación se puede representar como una colección de tablas. Por cada conjunto entidad y conjunto relación, existe una única tabla a la que se le asigna el nombre de conjunto entidad o relación, cada tabla tiene $n$ cantidad de columnas con nombres únicos, generalmente correspondiente a los atributos.
-La conversión de un diagrama Entidad-Relación a formato de tablas, es la base para la derivación de un diseño de una base de datos relacional.
-La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de entidad o relación, la cardinalidad que estos poseen y su participación en una relación.
+La conversión de un diagrama Entidad-Relación a formato de tablas, es la base para la derivación de un diseño de una base de datos relacional. La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de entidad o relación, la cardinalidad que estos poseen y su participación en una relación.
 >[!tldr] Redundancia de Tablas
 >Existen casos en que puede haber redundancia de tablas, uno de estos casos es la relación de identificación, la cual tiene siempre las siguientes características:
 >1. Es una relación de uno a varios.
