--- a/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
@@ -17,11 +17,11 @@ $$
 - **Unión**. Formalmente denotada como $r \cup s$, donde $r$ y $s$ son relaciones. Para que una operación unión del tipo $r \cup s$ sea válida, hay que exigir que se cumplan dos condiciones:
 	1. Las relaciones $r$ y $s$ deben ser de la misma aridad. Es decir, deben tener la misma cantidad de atributos.
 	2. Los dominios de los atributos i-ésimos de $r$ y de $s$ deben ser iguales para todo $i$.
-- **Diferencia de Conjuntos**. Formalmente denotada como $r - s$, donde $r$ y $s$ son relaciones. La diferencia de conjunto se debe realizar entre dos relaciones compatibles, esto implica que tanto $r$ como $s$ tengan la misma aridad y el mismo dominio para cada atributo $i$. Se define como:
+- **Diferencia de conjuntos**. Formalmente denotada como $r - s$, donde $r$ y $s$ son relaciones. La diferencia de conjunto se debe realizar entre dos relaciones compatibles, esto implica que tanto $r$ como $s$ tengan la misma aridad y el mismo dominio para cada atributo $i$. Se define como:
 $$
 r - s = \{t|t \in r \land t \notin s\}
 $$
-- **Producto Cartesiano**. Formalmente denotado como $r \times s$, donde $r$ y $s$ son relaciones. Se asume que los atributos de $r(R)$ y $s(S)$ son disjuntos, es decir, ningunos de sus atributos comparten el mismo nombre, en caso de que esto ocurra debe utilizarse el renombramiento. El resultado de esta operación será una nueva relación $w(R \cup S)$ cuyas filas surgen de concatenar cada fila de la primera relación con cada una de las filas de la otra relación. Esta operación se define como:
+- **Producto cartesiano**. Formalmente denotado como $r \times s$, donde $r$ y $s$ son relaciones. Se asume que los atributos de $r(R)$ y $s(S)$ son disjuntos, es decir, ningunos de sus atributos comparten el mismo nombre, en caso de que esto ocurra debe utilizarse el renombramiento. El resultado de esta operación será una nueva relación $w(R \cup S)$ cuyas filas surgen de concatenar cada fila de la primera relación con cada una de las filas de la otra relación. Esta operación se define como:
 $$
 r\times s = \{tq|t \in r \land q \in s\}
 $$
@@ -35,11 +35,11 @@ $$
 >En este caso el resultado de la expresión $E$ posee el nombre $x$ y sus atributos poseen el nombre $A_1, A_2, \dots, A_n$.
 
 Al modelo se le agregaron un conjunto de operaciones adicionales, las cuales no añaden nuevas propiedades al álgebra, sino que simplifican las consultas. Estas operaciones son:
-- **Intersección de Conjuntos**. Formalmente denotado como $r \cap s$, donde $r$ y $s$ son relaciones. Al igual que la unión y la diferencia, la intersección requiere que se satisfagan las mismas condiciones, es decir, que los conjuntos tengan la misma aridad y el mismo dominio para todos sus $i$ atributos. Se define como:
+- **Intersección de conjuntos**. Formalmente denotado como $r \cap s$, donde $r$ y $s$ son relaciones. Al igual que la unión y la diferencia, la intersección requiere que se satisfagan las mismas condiciones, es decir, que los conjuntos tengan la misma aridad y el mismo dominio para todos sus $i$ atributos. Se define como:
 $$
 r \cap s = \{t|t\in r \land t \in s\}
 $$
-- **Reunión Natural**. Formalmente denotado como $r \Join s$, donde $r$ y $s$ son relaciones. La relación natural de $r$ y $s$ es una relación en $R \cup S$ y se obtiene de la siguiente manera:
+- **Reunión natural**. Formalmente denotado como $r \Join s$, donde $r$ y $s$ son relaciones. La relación natural de $r$ y $s$ es una relación en $R \cup S$ y se obtiene de la siguiente manera:
 	- Considere cada par de tuplas $t_r$ de $r$ y $t_s$ de $s$.
 	- Si $t_r$ y $t_s$ tienen el mismo valor de los atributos en $R \cap S$, se agrega una tupla $t$ al resultado, donde:
 		- $t$ tiene el mismo valor que $t_r$ en $r$.
@@ -48,19 +48,19 @@ $$
 - **Asignación**. Formalmente denotada como $\leftarrow$, es una consulta que resulta conveniente para realizar consultas complejas. Permite escribir una expresión del álgebra relacional por partes utilizando la asignación a una variable de relación temporal, la cual puede utilizarse para expresiones posteriores.
 #### Álgebra Relacional Extendida
 Con el paso del tiempo se le fue agregando mayores funcionalidades y propiedades al álgebra relacional, aunque este tipo de operaciones no forman parte del estándar. 
-- **Proyección Generalizada**. Amplía la operación proyección, permitiendo que se utilicen *funciones aritméticas* en la lista de proyección, redefiniéndola como:
+- **Proyección generalizada**. Amplía la operación proyección, permitiendo que se utilicen *funciones aritméticas* en la lista de proyección, redefiniéndola como:
 $$
 \varPi_{F^1, F^2, \dots, F^n}(E)
 $$
 En donde $E$ es cualquier tipo de expresión del álgebra relacional y cada $F^n$ son expresiones aritméticas que incluyen constantes y atributos del esquema resultante de $E$, estos nuevos valores también pueden ser renombrados.
 
-- **Funciones de Agregación y Operaciones**. Son funciones que toman una colección de valores y devuelven como resultado un único valor. La forma general de la operación de agregación es la siguiente:
+- **Funciones de agregación y operaciones**. Son funciones que toman una colección de valores y devuelven como resultado un único valor. La forma general de la operación de agregación es la siguiente:
 $$
 G_1, G_2, \dots, G_n \ g \ F_1(A_1), F_2(A_2), \dots F_i(A_i) \Large (E)
 $$
 En donde $E$ es cualquier tipo de expresión del álgebra relacional, $G_1, G_2, \dots, G_n$ constituyen una lista de atributos que indican como se realizará la agrupación, $F_i$ es una función de agregación y $A_i$ es un nombre de atributo.
 
-- **Reuniones Externas**. Es una ampliación de la operación reunión para trabajar con la información que falta, existen tres tipos de reuniones externas, la reunión externa por izquierda, por derecha y la completa. Las tres formas de la reunión externa calculan la reunión y añaden tuplas adicionales al resultado de la misma, con la desventaja de que añade valores nulos, lo que puede generar problemas a la hora de realizar cálculos.
+- **Reuniones externas**. Es una ampliación de la operación reunión para trabajar con la información que falta, existen tres tipos de reuniones externas, la reunión externa por izquierda, por derecha y la completa. Las tres formas de la reunión externa calculan la reunión y añaden tuplas adicionales al resultado de la misma, con la desventaja de que añade valores nulos, lo que puede generar problemas a la hora de realizar cálculos.
 - **Borrar**. En el álgebra relacional, los borrados se expresan de la siguiente manera, $r \leftarrow r- E$, donde $r$ es una relación y $E$ es una expresión del álgebra relacional.
 - **Inserción**. En el álgebra relacional, las inserciones se expresan de la siguiente manera, $r \leftarrow r \cup E$, donde $r$ es una relación y $E$ es una expresión del álgebra relacional.
 - **Actualización**. Se puede utilizar el operador proyección generalizada para realizar esta tarea de la siguiente manera
