--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -38,7 +38,8 @@ SELECT nombre_cliente, prestatario.numero_prestamo, importe
 -- sucursal de Nevacerrada
 SELECT DISTINCT C.nombre_cliente
 	FROM prestatario C, prestamo P
-	WHERE C.num_prestamo = P.num_prestamo AND C.nombre_sucursal = 'Navacerrada'
+	WHERE C.num_prestamo = P.num_prestamo AND
+		  C.nombre_sucursal = 'Navacerrada'
 	ORDER BY C.nombre_cliente DESC;
 ```
 
@@ -46,8 +47,8 @@ SELECT DISTINCT C.nombre_cliente
 >En el ejemplo anterior se les asigna a la tabla de **prestatario** y **préstamo** un alias, estas son las variables tuplas, estas se definen en la cláusula `FROM` al igual que en el cálculo relacional de tuplas y son útiles para realizar cierto tipo de operaciones, además de permitir crear consultas más limpias y ordenadas.
 
 - **Renombramiento**: SQL proporciona un mecanismo para renombrar tanto relaciones como atributos. Para ello utiliza la cláusula `as`, con el siguiente formato `nombre_viejo as nombre_nuevo`.
-- **Operaciones sobre Cadenas de Texto**: El estándar de SQL define una serie de operaciones y operadores para la manipulación de cadenas, en general son las mismas que se encuentran en cualquier lenguaje de programación, con la diferencia de que dependiendo la base de datos van a variar los operadores y las formas de realizar ciertas operaciones.
-- **Operaciones Set**: Son el conjunto de operaciones definidas para los conjuntos, muchas bases de datos solo implementan las 3 operaciones básicas `UNION`, `INTERSECT` y `EXCEPT`. Las operaciones Set eliminan los duplicados, debido a que son operaciones de conjuntos.
+- **Operaciones sobre cadenas de texto**: El estándar de SQL define una serie de operaciones y operadores para la manipulación de cadenas, en general son las mismas que se encuentran en cualquier lenguaje de programación, con la diferencia de que dependiendo la base de datos van a variar los operadores y las formas de realizar ciertas operaciones.
+- **Operaciones de conjuntos**: Son el conjunto de operaciones definidas para los conjuntos, muchas bases de datos solo implementan las 3 operaciones básicas `UNION`, `INTERSECT` y `EXCEPT`. Las operaciones Set eliminan los duplicados, debido a que son operaciones de conjuntos.
 
 >[!note] Cláusula `ALL` en las Operaciones Set
 >En caso de que se desee conservar los duplicados se debe especificar explícitamente utilizando la cláusula `ALL`, por ejemplo `UNION ALL`. 
@@ -56,8 +57,8 @@ SELECT DISTINCT C.nombre_cliente
 >- $min(m, n)$ veces para la intersección.
 >- $max(0, m-n)$ en caso de la diferencia.
 
-- **Funciones de una Fila**: Toman uno o más valores de entrada de una sola fila, y retorna un valor por cada fila, algunos ejemplos de esto son las funciones `UPPER`, `LOWER` o `ABS` entre muchas otras. Estas funciones modifican los valores de las filas de manera independiente.
-- **Función de Agregación**: Las funciones de agregación son funciones que toman una colección de valores como entrada y producen un único valor como salida. El estándar SQL define cinco funciones de agregación primitivas, `AVG`, `MIN`, `MAX`, `SUM` y `COUNT`.
+- **Funciones de una fila**: Toman uno o más valores de entrada de una sola fila, y retorna un valor por cada fila, algunos ejemplos de esto son las funciones `UPPER`, `LOWER` o `ABS` entre muchas otras. Estas funciones modifican los valores de las filas de manera independiente.
+- **Función de agregación**: Las funciones de agregación son funciones que toman una colección de valores como entrada y producen un único valor como salida. El estándar SQL define cinco funciones de agregación primitivas, `AVG`, `MIN`, `MAX`, `SUM` y `COUNT`.
 	- La cláusula `GROUP BY` te permite agrupar los resultados de las funciones de agregación de acuerdo a los atributos especificados. Cuando se utiliza esta cláusula, el `SELECT` solo puede contener los atributos que aparecen en el `GROUP BY` o atributos calculados a partir de otros atributos.
 	- La cláusula `HAVING` te permite especificar predicados que deben ser evaluados luego de realizar el agrupamiento, ya que la cláusula `WHERE` siempre se aplica antes de realizar los agrupamientos, véase el ejemplo:
 ```sql
@@ -119,7 +120,7 @@ SELECT DISTINCT S.nombre_cliente
    FROM depositante S
    WHERE NOT EXISTS (SELECT nombre_sucursal
 						FROM sucursal
-						WHERE ciudad_sucursal = 'Barcelona')
+						WHERE ciudad_sucursal = 'Barcelona'
 					 EXCEPT
 					 SELECT R.nombre_sucursal
 						FROM depositante T, cuentas R
@@ -141,8 +142,7 @@ SELECT nombre_sucursal, res.saldo_medio
 
 En esta formulación no es necesario el uso de la cláusula `HAVING` dado que la relación temporal ***res*** se calcula en la cláusula `FROM`, y los atributos de la nueva relación de nombre ***res*** se pueden usar directamente en la cláusula `WHERE`.
 ## Reunión de Relaciones (JOIN)
-Las operaciones de reunión toman como entrada dos relaciones y devuelven como resultado otra relación. Los ***tipos de reunión*** definen cómo se tratan las tuplas de cada relación que no encajan con ninguna tupla de la otra relación y la ***condición de reunión*** indica las tuplas pertenecientes a las dos relaciones que encajan y los atributos que se incluyen en el resultado de la reunión.
-Dentro de los tipos de reuniones encontramos a los siguientes tipos:
+Las operaciones de reunión toman como entrada dos relaciones y devuelven como resultado otra relación. Los ***tipos de reunión*** definen cómo se tratan las tuplas de cada relación que no encajan con ninguna tupla de la otra relación y la ***condición de reunión*** indica las tuplas pertenecientes a las dos relaciones que encajan y los atributos que se incluyen en el resultado de la reunión. Dentro de los tipos de reuniones encontramos a los siguientes tipos:
 - `INNER JOIN`.
 - `LEFT OUTER JOIN`.
 - `RIGHT OUTER JOIN`.
@@ -172,8 +172,8 @@ DELETE FROM cuenta
 -- Borra todas las cuentas de la sucursales de Concoria
 DELETE FROM cuenta
 	WHERE nombre_sucursal IN (SELECT nombre_sucursal
-								 FROM sucursal
-								 WHERE ciudad_sucursal = 'Concordia');
+							   FROM sucursal
+							   WHERE ciudad_sucursal = 'Concordia');
 ```
 
 Para insertar datos en una tabla, existen dos posibles formas de hacerlo, la primera consiste en especificar la tupla que se desea insertar utilizando constantes, y la segunda es formulando una consulta en la cual sus resultados se insertaran en la tabla especificada. En ambos casos el dominio de los atributos que se están insertando deben ser los mismos que el de los atributos definidos en la tabla, además de poseer la misma aridad que dicha tabla. Veamos algunos ejemplos:
