--- a/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
+++ b/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
@@ -25,21 +25,20 @@ CREATE VIEW prestamo_sucursal(nombre_sucursal,
 ```
 ### Inserciones y Actualizaciones de Datos en las Vistas
 Supongamos que tenemos una vista de nombre *prestamo_sucursal*, la cual posee como atributos el nombre de sucursal y el número de préstamo, ambos atributos de la tabla *préstamo*, el caso de que queramos agregar una nueva tupla a esta vista, la inserción de este dato se hará a la tabla *préstamo*, debido a que las vistas no almacenan datos.
-El problema surge cuando la vista en la que se quiere introducir los datos está compuesta por atributos de varias tablas, es por eso que la mayoría de los sistemas de gestión de las bases de datos basadas en SQL imponen la siguiente restricción a la hora de modificar las vistas:
+Cuando la vista en la que se quiere introducir los datos está compuesta por atributos de varias tablas surge un problema, es por eso que la mayoría de los sistemas de gestión de las bases de datos basadas en SQL imponen la siguiente restricción a la hora de modificar las vistas:
 - Una modificación de una vista es válida solo si la vista en cuestión se define en términos de la base de datos relacional real, es decir, la relación no es resultado de una operación de `JOIN`, o una función de agregación.
 
-En este contexto, las operaciones de `UPDATE`, `INSERT` y `DELETE` no se podrían realizar para la vista *total_clientes*, dada como ejemplo anteriormente.
-Si bien esto puede lograrse a través de las ***vistas materializadas***, las cuales si poseen una tabla propia donde se almacenan los datos. El único percance es que al realizar cualquier tipo de modificación a las tablas asociadas se debe refrescar la tabla de la vista materializada, lo mismo si se modifican elementos de la vista materializada, teniendo que actualizar o insertar los registros de las respectivas tablas asociadas a dicha vista.
+En este contexto, las operaciones de `UPDATE`, `INSERT` y `DELETE` no se podrían realizar para la vista *total_clientes*, dada como ejemplo anteriormente. Este tipo de operaciones puede lograrse a cabo en las ***vistas materializadas***, las cuales si poseen una tabla propia donde se almacenan los datos. El único percance es que al realizar cualquier tipo de modificación a las tablas asociadas se debe refrescar la tabla de la vista materializada, lo mismo si se modifican elementos de la vista materializada, teniendo que actualizar o insertar los registros de las respectivas tablas asociadas a dicha vista.
 ## Integridad en las Bases de Datos
 Las restricciones de integridad garantizan que las modificaciones realizadas en la base de datos por los usuarios autorizados no den lugar a una pérdida de la consistencia de los datos. Por tanto, las restricciones de integridad protegen contra daños accidentales a las bases de datos.
 Idealmente por cuestiones de practicidad y ahorros de tiempo, el control de integridad no debe depender de las aplicaciones, ya sea la base de datos o el mismo sistema de archivos. Las restricciones pueden aplicarse en los siguientes ámbitos:
-- **Restricciones de Dominio**: La declaración para que un atributo pertenezca a un determinado dominio actúa como una restricción sobre los valores que puede tomar. El objetivo de los dominios es similar al de los tipos de datos en los lenguajes de programación convencionales. La cláusula `CHECK` le permite al diseñador del esquema especificar un predicado que debe satisfacer cualquier valor asignado a una variable cuyo tipo sea el dominio.
+- **Restricciones de dominio**: La declaración para que un atributo pertenezca a un determinado dominio actúa como una restricción sobre los valores que puede tomar. El objetivo de los dominios es similar al de los tipos de datos en los lenguajes de programación convencionales. La cláusula `CHECK` le permite al diseñador del esquema especificar un predicado que debe satisfacer para cualquier valor asignado a una variable cuyo tipo sea el dominio.
 >[!tldr] Creación de Dominios Propios
 >El estándar SQL permite que el usuario definan sus propios dominios y asignar estos mismos a distintos atributos en las diferentes tablas que componen la base de datos, con la particularidad de que también se pueden especificar más restricciones para estos dominios.
 >SQL permite realizar casteos desde un dominio a otro, siempre y cuando se respeten las reglas bajo las que fue definido dicho dominio. Además, estos dominios pueden ser borrados o alterados al igual que las tablas.
 
-- **Restricciones de Claves**: Existen atributos de las entidades que identifican a unívocamente a cada uno de los datos de una tabla. Los sistemas de gestión de base de datos permite a estos atributos como **claves primarias**, esto asegura que dicho valor no sea nulo.
-- **Restricciones de Integridad Referencial**: Consiste en asegurar que un valor que aparece en una relación para un conjunto de atributos determinado aparezca también en otra relación, es decir, esa relación posee una **clave foránea** que hace referencia a un elemento de otra relación.  Estas claves pueden especificarse cuando se están creando los esquemas, a través de la cláusula `FOREIGN KEY`. Esta cláusula permite especificar que hacer si una acción de borrado o de actualización en la relación a la que se hace referencia viola la restricción.
+- **Restricciones de claves**: Existen atributos de las entidades que identifican a unívocamente a cada uno de los datos de una tabla. Los sistemas de gestión de base de datos permite a estos atributos como **claves primarias**, esto asegura que dicho valor no sea nulo.
+- **Restricciones de integridad referencial**: Consiste en asegurar que un valor que aparece en una relación para un conjunto de atributos determinado aparezca también en otra relación, es decir, esa relación posee una **clave foránea** que hace referencia a un elemento de otra relación.  Estas claves pueden especificarse cuando se están creando los esquemas, a través de la cláusula `FOREIGN KEY`. Esta cláusula permite especificar que hacer si una acción de borrado o de actualización en la relación a la que se hace referencia viola la restricción.
 >[!tldr] Consideraciones para la Integridad Referencial
 >- Si hay una cadena de dependencias de claves externas entre varias relaciones, un borrado o una actualización en uno de sus extremos puede propagarse por toda la cadena.
 >- Una restricción de clave foránea de una relación puede hacer referencia a esa misma relación.
