--- a/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
@@ -1,5 +1,5 @@
 ## Lenguaje de Definición de Datos (DDL)
-El **Lenguaje de Definición** de SQL permite la especificación de un conjunto de relaciones, además de poder especificar más propiedades para los datos. El lenguaje de definición de datos nos permite especificar el esquema de cada relación, el dominio de valores asociado a cada atributo, las restricciones de integridad, el conjunto de índices que se deben mantener por cada relación, la información de seguridad y autorización para cada relación y la estructura de almacenamiento físico de cada relación en disco.
+El ***lenguaje de definición*** de SQL permite la especificación de un conjunto de relaciones, además de poder especificar más propiedades para los datos. El lenguaje de definición de datos nos permite especificar el esquema de cada relación, el dominio de valores asociado a cada atributo, las restricciones de integridad, el conjunto de índices que se deben mantener por cada relación, la información de seguridad y autorización para cada relación y la estructura de almacenamiento físico de cada relación en disco.
 SQL en su estándar define una serie de dominios nativos que pueden ser utilizados, entre los cuales encontramos:
 - `CHAR(n)`: Es una cadena de caracteres de longitud fija, con una longitud $n$ especificada por el usuario. También se puede utilizar la palabra completa `CHARACTER`, para especificar este tipo.
 - `VARCHAR(n)`: Es una cadena de caracteres de longitud variable, con una longitud máxima $n$ especificada por el usuario. También se puede utilizar la forma completa `CHARACTER VARYING`.
