--- a/4º Año/Bases de Datos/Unidad 5/1. Diseño Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 5/1. Diseño Relacional.md
@@ -11,7 +11,7 @@ El objetivo principal del diseño relacional, es generar un conjunto de esquemas
 >- **Conjuntos de Atributos**: Se utilizan las últimas letras del abecedario en mayúscula ($U$, $V$, $W$, $X$, $Y$, $X_1$, $X_2$).
 >- **Tuplas**: Se utilizan las últimas letras del abecedario en minuscula. Además $t[X]$ se refiere a los valores de $X$ en la tupla $t$.
 >- **Valores de atributos**: Se utiliza las primeras letras del abecedario en minúscula.
->- **Esquema de las Relaciones**: Se suele utilizar normalmente las letras $S$ y $R$.
+>- **Esquema de las relaciones**: Se suele utilizar normalmente las letras $S$ y $R$.
 >- **Relaciones**: Se suelen utilizar las letras $r$ y $s$ en minúscula.
 >- **Claves**: Se utiliza la letra $K$ más un subindice para especificar las claves de las relaciones.
 
@@ -35,8 +35,8 @@ Considere un esquema de relación $R$, donde $X \subseteq R$ e $Y \subseteq R$, 
 Las dependencias funcionales nos permiten expresar restricciones que no pueden expresarse usado superclaves.
 ### Uso de las Dependencias Funcionales
 Las dependencias funcionales pueden ser utilizadas para realizar las siguientes cuestiones:
-- Testear relaciones corroborando si estas son legales para un determinado conjunto de dependencias funcionales dadas. Si una relación $r$ es legal para un conjunto $F$ de dependencias funcionales se dice que $r$ satisface a $F$.
-- Especificar restricciones sobre el conjunto de relaciones legales. Se dice que $F$ se cumple en $R$ si todas las relaciones legales en $R$ satisfacen el conjunto $F$ de dependencias funcionales.
+- **Testear relaciones**. Ayudan a corroborando si estas son legales para un determinado conjunto de dependencias funcionales dadas. Si una relación $r$ es legal para un conjunto $F$ de dependencias funcionales, se dice que $r$ satisface a $F$.
+- **Especificar restricciones sobre el conjunto de relaciones legales**. Se dice que $F$ se cumple en $R$ si todas las relaciones legales en $R$ satisfacen el conjunto $F$ de dependencias funcionales.
 
 Puede que una instancia específica de un esquema, pueda satisfacer una dependencia funcional aún cunado la dependencia funcional no se cumple para todas las instancias legales, es decir, puede haber al menos una instancia que cumpla con las dependencias funcionales mientras que el resto de las instancias no.
 >[!tldr] Dependencias Funcionales Triviales
@@ -48,11 +48,11 @@ Puede que una instancia específica de un esquema, pueda satisfacer una dependen
 ### Clausura o Cierre de un Conjunto de Dependencias Funcionales.
 La ***clausura de un conjunto de dependencias funcionales***, denotada por $F^+$, es el conjunto de todas las dependencias funcionales que se pueden inferir lógicamente a partir de un conjunto dado $F$ de dependencias funcionales. Esto incluye todas las dependencias funcionales originales en $F$ más todas aquellas que se pueden derivar utilizando los axiomas de Armstrong.
 Los ***axiomas de Armstrong*** son reglas básicas utilizadas para derivar todas las posibles dependencias funcionales que se pueden inferir de un conjunto dado de dependencias funcionales. Estos axiomas son:
-1. **Reflexividad (Trivialidad)**: Si $Y \subseteq X \Rightarrow X \rightarrow Y$. Esto es bastante directo; si tienes un conjunto de atributos $X$, entonces esos atributos pueden determinar cualquier subconjunto Y de sí mismos.
+1. **Reflexividad (Trivialidad)**: Sí $Y \subseteq X \Rightarrow X \rightarrow Y$. Esto es bastante directo, si se tiene un conjunto de atributos $X$, entonces esos atributos pueden determinar cualquier subconjunto $Y$ de sí mismos.
 2. **Aumento**: Si $X \rightarrow Y \Rightarrow ZX \rightarrow ZY$. Esto significa que si una dependencia funciona para un conjunto de atributos, se le agrega más atributos a ambos lados de la dependencia, esta seguirá determinando al otro conjunto de atributos.
-3. **Transitividad**: Si $X \rightarrow Y \land Y \rightarrow Z \Rightarrow X \rightarrow Z$. Si un conjunto de atributos puede determinar un segundo conjunto, y ese segundo conjunto puede determinar un tercero, entonces el primer conjunto también puede determinar el tercero.
+3. **Transitividad**: Sí $X \rightarrow Y \land Y \rightarrow Z \Rightarrow X \rightarrow Z$. Si un conjunto de atributos puede determinar un segundo conjunto, y ese segundo conjunto puede determinar un tercero, entonces el primer conjunto también puede determinar el tercero.
 
-Estas axiomas se dicen que son sensatos, porque no generan dependencias funcionales incorrectas y completas ya que estas reglas te permiten inferir todas las dependencias funcionales de un conjunto cualquiera $F$ de dependencias funcionales. Se puede simplificar el calculo de $F^+$ agregando las siguientes reglas adicionales:
+Estos axiomas se dicen que son sensatos, porque no generan dependencias funcionales incorrectas y completas, ya que estas reglas te permiten inferir todas las dependencias funcionales de un conjunto cualquiera $F$ de dependencias funcionales. Se puede simplificar el cálculo de $F^+$ agregando las siguientes reglas adicionales:
 - **Union**: Si $X \rightarrow Y \land X \rightarrow Z \Rightarrow X \rightarrow YZ$. Si un conjunto de atributos $X$ determina $Y$ y también determina $Z$, entonces $X$ determina la combinación de $Y$ y $Z$. Esta regla permite combinar dependencias funcionales que comparten su lado izquierdo.
 - **Descomposición**: Si $X \rightarrow YZ \Rightarrow X \rightarrow Y \land X \rightarrow Z$. Si un conjunto de atributos $X$ determina un conjunto combinado de atributos $YZ$, entonces puedes separar ese conjunto y afirmar que $X$ determina $Y$ y $X$ determina $Z$ por separado.
 - **Pseudo Transición**: Si $X \rightarrow Y \land ZY \rightarrow W \Rightarrow ZX \rightarrow W$. Si un conjunto de atributos $X$ determina otro conjunto $Y$, y una combinación de $Y$ con otro conjunto $Z$ determina un tercer conjunto $W$, entonces la combinación de $Z$ con $X$ también determinará $W$.
@@ -70,13 +70,14 @@ La clausura un conjunto de atributos se utilizan para:
 Puede que un conjunto de dependencias funcionales contenga dependencias redundantes que se pueden inferir a partir de otras dependencias o incluso que ciertas dependencias funcionales tengan partes redundantes. Una ***cobertura canónica*** de $F$ es un conjunto minimal de dependencias funcionales equivalente a $F$, que no tiene dependencias redundantes o partes de una dependencia redundante.
 Dos conjuntos de dependencias son equivalentes si $F_1^+ = F_2^+ \Rightarrow F_1 \equiv F_2$. Pero como no es conveniente calcular las clausuras para cada $F_i$, se puede chequear las equivalencias de la siguiente manera $F_1 \vdash F_2 \land F_2 \vdash F_1 \Rightarrow F_1 \equiv F_2$, es decir, todas las dependencias funcionales de $F_2$ pueden ser inferidas a partir de $F_1$ y viceversa, si esto es posible para ambos conjuntos entonces $F_1$ es una cobertura canónica de $F_2$.
 #### Atributos Extraños
-Un **atributo extraño** en una dependencia funcional es un atributo que aunque esté presente en el lado izquierdo o derecho de la dependencia, no es necesario para establecer la relación de dependencia. En otras palabras, el atributo puede ser eliminado sin afectar la validez de la dependencia funcional.
+Un ***atributo extraño*** en una dependencia funcional es un atributo que aunque esté presente en el lado izquierdo o derecho de la dependencia, no es necesario para establecer la relación de dependencia. En otras palabras, el atributo puede ser eliminado sin afectar la validez de la dependencia funcional.
 - **Atributos extraños a Izquierda**: Dada una dependencia funcional $X \rightarrow Y$ en un conjunto de dependencias $F$. Un atributo $C$ es extraño en $X$ si $C \in X$ y aún se puede deducir $Y$ de $X$ sin $C$. Es decir, $(X -C) \rightarrow Y$. Formalmente, se debe cumplir que: 
 $$F \vdash F' = (F - \{X \rightarrow Y\}) \cup \{(X - C) \rightarrow Y\}$$
 - **Atributos Extraños a Derecha**: Un atributo $C$ es extraño en $Y$ si $C \in Y$ y eliminar $C$, la nueva dependencia $X \rightarrow (Y − C)$ todavía permite inferir $F$. Formalmente, se debe cumplir que:
 $$F' = F - \{X \rightarrow Y\} \cup \{X \rightarrow (Y - C)\} \vdash F$$
+
 Dada una dependencia funcional de la forma $X \rightarrow Y$. Se puede verificar si un atributo es extraño tanto por izquierda como por derecha de la siguiente manera:
 1. Para testear si el atributo $C \in X$ es extraño en $X$, primero se calcula $(X - C)^+$ usando las dependencias del conjunto $F$, luego se chequea si esta clausura contiene a $C$, si es así $C$ es extraño en $X$.
-2. Para testear si el atributo $C \in Y$ es extraño en $Y$, primero se calcula $X^+$ usando el siguiente conjunto $F' = F - \{X \rightarrow Y\} \cup \{X \rightarrow (Y - C)\}$, luego se chequea si $X^+$ en $F'$ contiene a $C$, si es así, $C$ es extraño.
+2. Para testear si el atributo $C \in Y$ es extraño en $Y$, primero se calcula $X^+$ usando el siguiente conjunto $F' = F - \{X \rightarrow Y\} \cup \{X \rightarrow (Y - C)\}$, luego se chequea si $X^+$ en $F'$ contiene a $C$, si es así, $C$ es extraño en $Y$.
 
 Una cobertura canónica para $F$ es un conjunto de dependencias $F_C$ tal que, $F \vdash F_C \land F_C \vdash F$. Además, ninguna dependencia funcional en $F_C$ contiene atributos extraños y cada lado izquierdo de las dependencias funcionales en $F_C$ es único.
