--- a/4º Año/Bases de Datos/Unidad 6/1. Seguridad en Bases de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 6/1. Seguridad en Bases de Datos.md
@@ -1,4 +1,4 @@
-La seguridad de bases de datos abarca aspectos legales y éticos sobre el acceso a información privada, además de involucrar políticas gubernamentales e institucionales sobre la protección y resguardo de los datos confidenciales. A medida que las organizaciones crecen y el volumen de datos manipulados por las mismas aumenta drásticamente, requiere en la mayoria de los casos la creación de distintos niveles de seguridad en el sistema para proteger datos clasificados de usuarios autorizados.
+La seguridad de bases de datos abarca aspectos legales y éticos sobre el acceso a información privada, además de involucrar políticas gubernamentales e institucionales sobre la protección y resguardo de los datos confidenciales.
 Al momento de operar una base de datos, existen una serie de factores que pueden amenazar la seguridad, entre ellas se encuentra la ***pérdida de integridad*** causada por la modificación errónea de los datos o malas inserciones de datos. La ***pérdida de disponibilidad*** por no contar con los privilegios necesarios para acceder a esos objetos de datos. Y por último, la ***pérdida de confidencialidad*** que está relacionado con la protección de los datos frente al acceso no autorizado.
 Dentro de los mecanismos que nos proporcionan las bases de datos se encuentran los controles de acceso, que le permiten a los administradores otorgar permisos a los distintos usuarios que pueden acceder a las bases de datos, este control de acceso puede ser:
 - **Discrecional**. Este tipo de control de acceso se basa en la idea de que los propietarios de los recursos tienen la autoridad para otorgar o restringir el acceso a otros usuarios según lo consideren necesario. Conceden privilegios a usuarios, incluyendo las capacidades de acceder a archivos de datos específicos, registros o campos en un modo determinado. Esto le permite a los distintos usuarios de las bases de datos otorgar privilegios de forma específica.
