--- a/4º Año/Bases de Datos/Unidad 10/3. Granularidad y Aislamiento.md
+++ b/4º Año/Bases de Datos/Unidad 10/3. Granularidad y Aislamiento.md
@@ -10,7 +10,7 @@ Si un nodo se bloquea en modo intencional se está haciendo un bloqueo explícit
 > Hay un modo intencional asociado al modo compartido y hay otro asociado al modo exclusivo, además de un modo de bloqueo adicional de este modo.
 > - **Modo Intencional-Compartido (IS)**: Se realiza un bloqueo explícito en un nivel inferior del árbol, pero sólo con bloqueos en modo compartido.
 > - **Modo Intencional-Exclusivo (IX)**: Se realiza un bloqueo explícito en un nivel inferior con bloqueos en modo exclusivo o en modo compartido.
-> - **Modo Intencional-Exclusivo y Compartido(SIX)**: Se realiza un bloqueo en modo exclusivo del subárbol cuya raíz sea el nodo especificado, y dicho bloqueo explícito se produce en un nivel inferior con bloqueos en modo exclusivo.
+> - **Modo Intencional-Exclusivo y Compartido (SIX)**: Se realiza un bloqueo en modo exclusivo del subárbol cuya raíz sea el nodo especificado, y dicho bloqueo explícito se produce en un nivel inferior con bloqueos en modo exclusivo.
 ### Protocolo de Bloqueos con Granularidad Múltiple
 El ***protocolo de bloqueo de dos fases con granularidad múltiple*** siguiente asegura la secuencialidad. En este protocolo cada transacción $T_i$ puede bloquear un nodo $Q$ usando las reglas siguientes:
 1. Debe respetarse la función de compatibilidad de bloqueos especificada en la siguiente tabla.
@@ -31,7 +31,7 @@ El ***protocolo de bloqueo de dos fases con granularidad múltiple*** siguiente 
 
 Obsérvese que en el protocolo de granularidad múltiple es necesario que se adquieran los bloqueos en *orden descendente*, y que se liberen en *orden ascendente*. Este protocolo permite la concurrencia y reduce la sobrecarga de bloqueos. Es particularmente útil en las aplicaciones con una mezcla de transacciones cortas que solo acceden a algunos elementos de datos y transacciones largas que producen informes a partir de un archivo completo o un conjunto de archivos.
 ## Niveles de Aislamiento
-La definición de transacción SQL es parecida a nuestro concepto de transacción ya definido. Es decir, es una unidad lógica de trabajo cuya atomicidad está garantizada. Una simple sentencia SQL se considera que siempre es atómica. En SQL no hay ninguna sentencia de inicio de transacción explícita, sin embargo, cada transacción debe tener una sentencia explícita de terminación, que puede ser `COMMIT` o `ROLLBACK`.
+La definición de transacción SQL es similar al concepto de transacción expuesto hasta el momento. Es decir, es una unidad lógica de trabajo cuya atomicidad está garantizada. Una simple sentencia SQL se considera que siempre es atómica. En SQL no hay ninguna sentencia de inicio de transacción explícita, sin embargo, cada transacción debe tener una sentencia explícita de terminación, que puede ser `COMMIT` o `ROLLBACK`.
 Una transacción tiene ciertas características atribuibles a ella, que se especifican en SQL mediante la sentencia `SET TRANSACTION`, estas características son las siguientes:
 - **Modo de acceso**: Permite indicar los permisos que tendrá esa transacción a la hora de su ejecución. Contamos con solo dos modos de acceso, el ***modo de solo lectura*** y el ***modo de lectura-escritura***. El primer modo solo le permite a las transacciones acceder a los datos, mientras que el segundo permite realizar todas las operaciones CRUD.
 - **Tamaño del área de diagnóstico**: Especifica un valor entero $n$ que indica el número de condiciones que se pueden mantener simultáneamente en el área de diagnóstico. Estas condiciones proporcionan retroalimentación sobre errores o excepciones ocurridas en la sentencia SQL recién ejecutada.
@@ -42,7 +42,13 @@ Una transacción tiene ciertas características atribuibles a ella, que se espec
 	4. **Serializable**: El nivel más estricto. Las transacciones se ejecutan de forma que parece que se ejecutaron secuencialmente, una después de otra. Evita lecturas sucias, lecturas no repetibles y lecturas fantasma.
 
 La siguiente imagen muestra los tipos de violaciones que pueden suceder en cada nivel de aislamiento.
-![[tipo-violaciones.png]]
+
+| Nivel de Aislamiento | Lecturas sucias | Lecturas Irrepetibles | Fenómenos Fantasmas |
+| -------------------- | --------------- | --------------------- | ------------------- |
+| `READ UNCOMMITED`    | Si              | Si                    | Si                  |
+| `READ COMMITED`      | No              | Si                    | Si                  |
+| `REPEATABLE READ`    | No              | No                    | Si                  |
+| `SERIALIZABLE`       | No              | No                    | No                  |
 
 >[!example] Lecturas Irrepetibles
 >Supongamos que existen dos transacciones, $T_1$ y $T_2$, y que $T_1$ lee uno o más registros de una tabla, si $T_2$ actualiza alguno de esos registros que $T_1$ había leído previamente y luego $T_1$ vuelve a leer los mismos registros, encontrará valores diferentes. Este fenómeno se conoce como ***lectura irrepetible***.
