--- a/4º Año/Bases de Datos/Unidad 10/4. Gestion de Interbloqueos y Fallos.md
+++ b/4º Año/Bases de Datos/Unidad 10/4. Gestion de Interbloqueos y Fallos.md
@@ -8,15 +8,15 @@ Para tratar de manejar los interbloqueos existen a grandes razgos tres métodos 
 Estos métodos se vasan en utilizar algún protocolo de control de concurrencia, que no admita que el sistema caiga en un interbloqueo, tal como los protocolos de validación, locks grupal o los protocolos basados en grafos.
 El problema del lock grupal es la inanición, ya que una transacción que necesita muchos datos nunca logrará bloquear todos los datos necesarios, quedando en estado de espera indefinidamente. Una alternativa a este método es establecer un orden en que se bloquean los datos como lo hacen los protocolos de grafos. Por ejemplo, para evitar interbloqueos entre tablas, se pueden bloquear primero la tabla maestro y luego la de detalle.
 ## Mecanismos Prevención
-Los métodos de prevención aseguran que el sistema nunca llegue a un estado de interbloqueo. Un mecanismo para prevenir interbloqueos es la utilización de expropiación y retroceso de transacciones. Para controlar estas situaciones, se asigna una marca temporal única a transacción. El gestor de la base de datos utiliza estas marcas para decidir si una transacción debe esperar o retroceder, estas decisiones varían de acuerdo al esquema empleado por la base de datos. Para la prevención de interbloqueos se han propuesto dos esquemas diferentes basados en marcas temporales:
-1. **Esperar-morir**: Esta técnica no utiliza expropiaciones. Cuando una transacción $T_i$ solicita un dato que $T_k$ tiene bloqueado en ese momento, se permitirá que $T_i$ espere solo si $ts(T_i) < ts(T_k)$; de lo contrario $T_i$ retrocede. Es decir, las transacciones más antiguas esperan a que se liberen los datos mientras que las más jóvenes retroceden.
-2. **Herir-esperar**: Esta técnica se basa en expropiaciones. Cuando una transacción $T_i$ solicita un dato que $T_k$ tiene bloqueado en ese momento, se permitirá que $T_i$ espere solo si $ts(T_i) > ts(T_k)$; de lo contrario $T_k$ retrocede. Esto quiere decir que las transacciones más recientes esperaran los datos mientras que las transacciones más antiguas se apoderarán de los datos bloqueados por otras transacciones más jóvenes. En este último caso se dice que $T_i$ hiere a $T_k$, ya que $T_k$ retrocede para ceder los bloqueos en datos a $T_i$, la cual es más antigua.
+Los métodos de prevención aseguran que el sistema nunca llegue a un estado de interbloqueo. Un mecanismo para prevenir interbloqueos es la utilización de expropiación y retroceso de transacciones. Para controlar estas situaciones, se asigna una marca temporal única a cada transacción. El gestor de la base de datos utiliza estas marcas para decidir si una transacción debe esperar o retroceder, estas decisiones varían de acuerdo al esquema empleado por la base de datos. Para la prevención de interbloqueos se han propuesto dos esquemas diferentes basados en marcas temporales:
+1. **Esperar-morir**: Esta técnica no utiliza expropiaciones. Cuando una transacción $T_i$ solicita un dato que $T_k$ tiene bloqueado en ese momento, se permitirá que $T_i$ espere solo si $ts(T_i) < ts(T_k)$; de lo contrario $T_i$ retrocede. Es decir, las transacciones más jóvenes esperan a que se liberen los datos mientras que las más antiguas retroceden.
+2. **Herir-esperar**: Esta técnica se basa en expropiaciones. Cuando una transacción $T_i$ solicita un dato que $T_k$ tiene bloqueado en ese momento, se permitirá que $T_i$ espere solo si $ts(T_i) > ts(T_k)$; de lo contrario $T_k$ retrocede. Esto quiere decir que las transacciones más recientes esperarán a las más antiguas, mientras que las transacciones más antiguas expropiarán los datos bloqueados por transacciones más jóvenes. En este último caso se dice que $T_i$ hiere a $T_k$, ya que $T_k$ retrocede para ceder los bloqueos a $T_i$, la cual es más antigua.
 
-En cualquiera de los casos, si una transacción retrocede sigue conserva la misma marca de tiempo, esto evita la inanición, dado que una transacción más vieja nunca retroceden. El problema principal de estos esquemas, es que muchas veces pueden ocurrir retrocesos innecesarios.
+En cualquiera de los casos, si una transacción retrocede esta sigue conservando la misma marca de tiempo, esto evita la inanición, dado que una transacción más vieja nunca retroceden. El problema principal de estos esquemas, es que muchas veces pueden ocurrir retrocesos innecesarios.
 Otro enfoque simple al tratamiento de interbloqueos se basa en ***bloqueos con límite de tiempo***. En este enfoque una transacción que haya solicitado un bloqueo espera por lo menos durante un intervalo de tiempo especificado, si no se conceden los bloqueos la transacción retrocede por sí sola y vuelve a comenzar. En caso de que haya existido un interbloqueo alguna de las transacciones involucradas retrocederá permitiendo a las demás continuar con su ejecución normal.
 Este método es fácil de implementar y funciona bien con transacciones cortas, pero presenta desafíos al determinar el tiempo de espera adecuado, puesto que esperas largas causan retrasos innecesarios, lo mismo sucede para los tiempos de espera cortos. Además, existe el riesgo de inanición, lo que limita su aplicación.
 ## Mecanismos de Detección y Recuperación
-Se puede permitir que la base de datos llegue a un estado de interbloqueo para luego detectarlo y recuperarse. Para poder detectar un interbloqueo se debe invocar cada cierto tiempo un algoritmo que se encargue de realizar este chequeo. Para esto el gestor de la base de datos debe:
+Se permite que la base de datos llegue a un estado de interbloqueo para luego detectarlo y recuperarse. Para poder detectar un interbloqueo se debe invocar cada cierto tiempo un algoritmo que se encargue de realizar este chequeo. Para esto el gestor de la base de datos debe:
 1. Mantener información acerca de la asignación actual de los datos a las transacciones, así como también de las solicitudes pendientes.
 2. Proporcionar un algoritmo que utilice esta información para determinar si el sistema ha entrado en interbloqueo.
 3. Recuperarse del interbloqueo cuando el mecanismo de detección indica que existe.
