--- a/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 13/1. Almacenes de Datos.md
@@ -11,14 +11,14 @@ Los almacenes de datos (Data Werehouse) son esquemas separados en las bases de d
 >**OLTP** (Procesamiento de Transacciones en Línea) se enfoca en manejar datos actuales y está optimizado para transacciones rutinarias y frecuentes. Su principal objetivo es gestionar las operaciones diarias de **CRUD**. Estas transacciones son predecibles y repetibles, lo que permite un uso eficiente por parte de un gran número de usuarios simultáneamente. El acceso a los datos es rápido y normalmente los datos provienen de una única fuente. OLTP proporciona un nivel de detalle alto, adecuado para las operaciones cotidianas de la empresa.
 >Por otro lado, **OLAP** (Procesamiento Analítico en Línea) se utiliza principalmente para el análisis de datos históricos, derivados y resumidos. Está optimizado para consultas complejas que requieren la recuperación de grandes volúmenes de información. El acceso a los datos es mayormente de lectura, y su uso es menos frecuente y más aleatorio o ad hoc, con un enfoque heurístico. El nivel de detalle es apropiado para la toma de decisiones, y los tiempos de respuesta pueden variar desde segundos hasta minutos. A diferencia de OLTP, OLAP tiene un número más limitado de usuarios y recopila datos de diversas fuentes, lo que permite un análisis más integral.
 ## Almacenes de Datos (Data Werehouse)
-Entonces podemos definir a los almacenes de datos como una base de datos que va a dar soporte a todos los proceso de decisiones de la organización. Por esta misma razón los almacenes de datos poseen las siguientes características:
+Entonces podemos definir a los almacenes de datos como una base de datos que va a dar soporte a todos los procesos de decisiones de la organización. Por esta misma razón los almacenes de datos poseen las siguientes características:
 - **Orientada a temas**: Los almacenes de datos están diseñados para facilitar el análisis de la información. Por ejemplo, se puede crear un almacén enfocado en las ventas de la empresa para obtener detalles específicos, qué clientes compran ciertos productos. Esta capacidad de estructurar el almacén de datos por temas, como las ventas, lo convierte en un sistema orientado al tema.
 - **Integridad de datos**: La integración está directamente relacionada con la orientación temática de los almacenes de datos. Estos deben unificar datos de diversas fuentes en un formato coherente, resolviendo problemas como los conflictos de nombres y las inconsistencias en las unidades de medida. Cuando logran esto, se consideran ***integrados***.
 - **Granularidad de los datos**: En los almacenes de datos, los datos suelen almacenarse de manera agregada, como ventas diarias, semanales o mensuales por producto o región. Reduciendo así el grado de detalle en los datos.
 - **Tiempo variable**: Los almacenes de datos almacenan datos históricos. La información en estos almacenes posee su propio sello de tiempo, lo que permite analizar el pasado, relacionarla con el presente y realizar previsiones para el futuro.
 - **Datos no volátiles**: La no volatilidad en un almacén de datos significa que, una vez que los datos se introducen, no deben modificarse. Esto es coherente con su objetivo de permitir el análisis de eventos pasados. Las únicas operaciones que se puede realizar sobre un almacén de datos son la carga y consultas de datos.
 
-Para comenzar a poblar con información un almacén de datos se debe realizar un proceso de ***extracción, transformación y carga (ETL)***, este paso es muy importante porque de esta forma automatizamos la carga de datos de forma periódica al almacén de datos, asegurando a su vez la consistencia e integridad de los datos cargados al almacén. Este proceso es realizado en por lote, no en tiempo real.
+Para comenzar a poblar con información un almacén de datos se debe realizar un proceso de ***extracción, transformación y carga (ETL)***, este paso es muy importante porque de esta forma automatizamos la carga de datos de forma periódica al almacén de datos, asegurando a su vez la consistencia e integridad de los datos cargados al almacén. Este proceso es realizado por lote, no en tiempo real.
 ![[esquema-etl.png]]
 
 Los periodos de carga pueden variar de acuerdo a las necesidades, pero en la mayoría de los casos los periodos son superior al día, pueden existir ocasiones en la que se requiera periodos de tiempo más cortos en dicho caso solo cambia la configuración.
@@ -46,11 +46,11 @@ El principal propósito de las tablas de dimensiones es proveer mayor contexto o
 Generalmente, las tablas dimensionales están compuestas por atributos y es bastante común que posean una sola clave primaria. Mientras que las tablas de hechos suelen caracterizarse por tener muchas claves foráneas y en ciertos casos atributos propios.
 ### Esquemas para el Modelo Dimensional
 Existen dos modelos dimensionales principales:
-- **Esquema en Estrella**: Es un modelo de datos en el que una tabla central, llamada **tabla de hechos (fact table)**, almacena los datos que se desean analizar, mientras que está rodeada por tablas de dimensiones que proporcionan contexto para esos datos. Este modelo es simple, fácil de entender, y está optimizado para consultas rápidas.
-- **Esquema en Copo de Nieve**: Es una versión más compleja del esquema en estrella, en la que las tablas de dimensiones se organizan en jerarquías, creando una estructura más detallada y normalizada. Este enfoque busca reducir la redundancia de datos, aunque a costa de una mayor complejidad en las consultas. Es útil cuando las dimensiones tienen subniveles que requieren una mayor precisión en el análisis.
+- **Esquema en estrella**: Es un modelo de datos en el que una tabla central, llamada **tabla de hechos (fact table)**, almacena los datos que se desean analizar, mientras que está rodeada por tablas de dimensiones que proporcionan contexto para esos datos. Este modelo es simple, fácil de entender, y está optimizado para consultas rápidas.
+- **Esquema en copo de nieve**: Es una versión más compleja del esquema en estrella, en la que las tablas de dimensiones se organizan en jerarquías, creando una estructura más detallada y normalizada. Este enfoque busca reducir la redundancia de datos, aunque a costa de una mayor complejidad en las consultas. Es útil cuando las dimensiones tienen subniveles que requieren una mayor precisión en el análisis.
 
 Ambos esquemas se utilizan en almacenes de datos para facilitar el análisis y las consultas de grandes volúmenes de información, adaptándose según las necesidades de rendimiento y flexibilidad.
 >[!tldr] Drill-Down y Roll-Up
->Al momento de analizar los datos existen dos técnicas que nos permiten brindar mayor o menor grado de detalle a la información que se encuentra en un almacén de datos, estas técnicas son las siguientes:
->- **Drill-Down**: Este tipo de técnicas permite a partir de datos más generales llegar a datos muchos más específicos, es decir, esta técnica profundiza el nivel de detalles en los datos.
->- **Roll-Up**: Permite transformar datos mucho más específicos en datos más generales, es decir, encampsula la información y la abstrae para proveer una visión más general de estos mismos.
+>En el análisis de datos, existen dos técnicas fundamentales que permiten ajustar el nivel de detalle de la información almacenada en un almacén de datos. Estas técnicas son:
+>- **Drill-Down (Profundización)**: Esta técnica permite navegar desde un nivel de información general hacia niveles más detallados y específicos. Por ejemplo, se puede partir desde las ventas anuales y profundizar hasta ver las ventas por trimestre, mes o día.
+>- **Roll-Up (Consolidación)**: Esta técnica realiza el proceso inverso, permitiendo agregar o consolidar datos detallados en resúmenes más generales. Por ejemplo, permite transformar datos de ventas diarias en resúmenes mensuales o anuales, facilitando así una visión más global de la información.
